Done with functional code

--- a/ZooCode/appsettings.json
+++ b/ZooCode/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ZooProjectContext": "Data Source=(localdb)\\mssqllocalDB;Database=ZooProjectDBNew;Trusted_Connection=True;MultipleActiveResultSets=true"    
+    "ZooProjectContext": "Data Source=(localdb)\\mssqllocalDB;Database=ZooProjectDB;Trusted_Connection=True;MultipleActiveResultSets=true"    
   }
 }
